# backend/src/routes/Router.ts
@@ -1,8 +1,16 @@
 import { Router } from "express";
 import customerRouter from "./customer.route";
+import adminRouter from "./admin.route";
+import supplierRouter from "./supplier.route";
+import categoryRouter from "./category.route";
+import productRouter from "./product.route";
 
 const router = Router();
 
 router.use("/customers", customerRouter)
+router.use("/admin", adminRouter)
+router.use("/supplier", supplierRouter)
+router.use("/category", categoryRouter)
+router.use("/product", productRouter)
 
 export default router;
