# backend/src/routes/product.route.ts
@@ -1,0 +1,12 @@
+import express from "express";
+import { list,create,detail, update, deleteById } from "../controllers/productController"
+
+const router = express.Router();
+
+router.get('/', list);
+router.post('/', create);
+router.get('/:id', detail);
+router.put('/:id', update);
+router.delete('/:id', deleteById);
+
+export default router;
